# rag

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.dev.yaml  llm_client.py  main.py  rag.py  requirements.txt
.github/workflows/: build-python.yml
api/: pyproject.toml  requirements.txt
api/api/: entry.py  routes.py
api/docker/: devCuda.Dockerfile  devPure.Dockerfile
api/rag/: document_parser.py  llm.py  rag.py  rag_database.py
api/tests/: api_test.py
backend/: pom.xml
backend/chat-service/: entrypoint.sh  pom.xml
backend/chat-service/docker/: dev.Dockerfile
backend/eureka/: pom.xml
backend/eureka/docker/: dev.Dockerfile
backend/gateway/: pom.xml
backend/gateway/docker/: dev.Dockerfile
backend/user-service/: pom.xml
backend/user-service/docker/: dev.Dockerfile
dataset/: medical-exams-LEK-PL-210-questions.json  preprocessing.py  rag_evaluation_results.json  rag_evaluation_results_rag.json  rag_output.json  rag_output_chatgpt.json  rag_output_rag.json
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/docker/: dev.Dockerfile
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/api/: aiApi.ts  apiClient.ts  authApi.ts  backendApi.ts  chatApi.ts  userApi.ts
frontend/src/components/: AgreeFooter.tsx
frontend/src/config/: mantineConfigStyles.ts
frontend/src/constants/: breakPoints.tsx  colorPalette.tsx  styles.tsx  typography.tsx
frontend/src/hooks/: useAuth.tsx  useChat.tsx  useChatInput.ts  (+2 more)
src/: document.py  evaluation.py  llm_client.py  rag.py  vector_database.py
(+164 files in other folders)
