[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RAG"
description = "RAG research project"
version = "0.1"
dynamic = ["version"]
requires-python=">= 3.11"
authors = [
   {name = "Bartosz Skorowski"},
   {name = "Kamil Raubo"},
   {name = "Jakub Bot"}
]
readme = "README.md"


[tool.ruff]
# Files to include
include = ["./**/*.py"]

# Exclude common directories
exclude = [ "./tests/**/*.py",".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
]

line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[too.ruff.lint]
select = ["ALL"]
ignore = ["D100","D104","D203","D213","D400","D415","D401","COM812"]
per-file-ignores = { "tests/*" = ["S101","PLR2004","D103","ANN201"] }
fixable = []
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"



[tool.mypy]

strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
